add java 8 support (fixes #33), change folia support, restructure project